# nutria-plugin-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: admin-extensions.md  cli.md  connection-types.md  index.md  manifest.md  python-api.md  quickstart.md  security.md  skill-format.md
examples/my-first-plugin/: README.md  plugin.json
src/nutria_plugin/: __init__.py  bundle.py  cli.py  manifest.py  packaging.py  signing.py
tests/: test_bundle.py  test_cli.py  test_manifest.py  test_packaging.py  test_signing.py
