[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutria-plugin"
version = "0.0.1-alpha"
description = "SDK for building, validating, signing, and packaging Nutria plugins"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nutria", email = "dev@nutria.ai"},
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
nutria-plugin = "nutria_plugin.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nutria_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
